--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/128/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/128/index.mdx
@@ -84,8 +84,8 @@ Nadav est co-founder de Wix et nous présente son nouveau projet, un IDE visuel 
 - 📜 [Integrate Next.js and Storybook automatically](https://storybook.js.org/blog/integrate-nextjs-and-storybook-automatically/): présente le fonctionnement du support automatique de Next.js via la nouvelle [Framework API](https://storybook.js.org/blog/framework-api/) qui arrive dans Storybook 7 (maintenant en [beta](https://github.com/storybookjs/storybook/releases/tag/v7.0.0-beta.0)). Storybook est capable de mieux comprendre votre projet Next.js. Plus besoin d'ajouter des décorateurs pour le support de la navigation ou des composants Link et Image. Le support va continuer de s'améliorer dans le temps: Server Components, next/font...
 - 📜 [Optimizing Web Fonts in Next.js 13](https://www.lydiahallie.io/blog/optimizing-webfonts-in-nextjs-13): probablement l'article le mieux illustré sur les font layout shifts. Explique à la fin comment Next.js optimise tout ça pour nous.
 - 📜 [Migrating a large, open-source React application to Next.js and Vercel](https://vercel.com/blog/migrating-a-large-open-source-react-application-to-next-js-and-vercel): Vercel fait un POC de migration du site open-source de la BBC, pour s'amuser 😄 Ils mettent en avant les avantages obtenus rien qu'en étant sur une stack Next.js.
+- 📜 [Avoid These Common Pitfalls Of React useState](https://profy.dev/article/react-usestate-pitfalls): 6 anti-patterns communs présentés avec des solutions + des exercices interactifs
 - 📜 [The Evolution of urql](https://formidable.com/blog/2022/evolution-of-urql/)
-- 📜 [Avoid These Common Pitfalls Of React useState](https://profy.dev/article/react-usestate-pitfalls)
 - 📜 [Publishing Docusaurus to dev.to with the dev.to API](https://dev.to/johnnyreilly/publishing-docusaurus-to-devto-with-the-devto-api-9bg)
 - 📜 [An Introduction To RedwoodJS](https://blog.openreplay.com/an-intro-to-redwoodjs/)
 - 📜 [Using Path Matching in React Router](https://www.taniarascia.com/path-matching-in-react-router/)
