--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/129/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/129/index.mdx
@@ -1,6 +1,6 @@
 ---
-slug: /ISSUENUMBER
-title: "React Hebdo #ISSUENUMBER: ..."
+slug: /129
+title: "React Hebdo #129: ..."
 authors: [slorber]
 date: 12-31-2023
 image: /img/TWIR_POST.png
@@ -9,7 +9,7 @@ unlisted: true
 
 Salut à tous !
 
-<Todo />
+Mon [épisode pour le podcast React Round Up](https://topenddevs.com/podcasts/react-round-up/episodes/new-react-features-mdx-and-docusaurus-with-sebastien-lorber-rru-206) est en ligne. On y parle des dernières nouveautés React 18, de MDX ou encore Docusaurus.
 
 <!-- truncate -->
 
@@ -41,7 +41,47 @@ Commencez ici: [ReactBricks.com](https://reactbricks.com/?utm_source=this_week_i
 
 ## ⚛️ React {#react}
 
-<Todo />
+[Downgrade to MPA if users prefer reduced data in Remix](https://sergiodxa.com/articles/downgrade-to-mpa-if-users-prefer-reduced-data-in-remix) + https://twitter.com/sergiodxa/status/1603792055255416833
+
+[Storybook 7.0 beta](https://storybook.js.org/blog/7-0-beta/)
+
+https://twitter.com/storybookjs/status/1603773143201775618
+
+[React Router 6.5 + Remix 1.9](https://twitter.com/remix_run/status/1603887581770354688)
+
+[Remix Flat Routes 0.5.1](https://twitter.com/kiliman/status/1603845269895921664)
+
+[OpenNEXT](https://github.com/serverless-stack/open-next)
+
+https://open-next.js.org/
+
+React Email: https://twitter.com/zenorocha/status/1603406791630520320
+
+NodeToy: https://twitter.com/nodetoy/status/1603114419348590593 https://twitter.com/Andersonmancini/status/1603156986660638723
+
+? https://twitter.com/alexdotjs/status/1603419413251649536
+
+- 📖 Beta docs: [useLayoutEffect](https://twitter.com/dan_abramov/status/1603772620641431553)
+- 👀 [useEvent => useEffectEvent](https://twitter.com/sebastienlorber/status/1603817244387348480)
+- 🎅 [GitHub Unwrapped 2022](https://www.githubunwrapped.com/)
+- 📜 [Next, Nest, Nuxt… Nust?](https://www.twilio.com/blog/comparing-nextjs-nestjs-nuxt-gatsby)
+- 📜 [Why does onClick={x()} causes "too many re-renders" error in React?](https://alexsidorenko.com/blog/onclick-too-many-re-renders/)
+- 📜 [The Most Popular CSS-in-JS Libraries in 2022](https://stackdiary.com/css-in-js-libraries/)
+- 📜 [Svelte vs React: Which framework to learn in 2023?](https://scrimba.com/articles/svelte-vs-react/)
+- 📜 [Applying Design Patterns in React: Strategy Pattern](https://dev.to/itshugo/applying-design-patterns-in-react-strategy-pattern-enn)
+- 📜 [Conditional wrapping in React](https://daily-dev-tips.com/posts/conditional-wrapping-in-react/)
+- 📜 [Announcing SvelteKit Auth: Bringing NextAuth.js to all frameworks](https://vercel.com/blog/announcing-sveltekit-auth): https://twitter.com/balazsorban44/status/1603082914362986496
+- 🎥 [Is NextJS A Trap? Vendor Lock In Rant](https://www.youtube.com/watch?v=mhdO8f_45CA)
+- 🎥 [Reflections on a career managing React with Tom Occhino](https://www.youtube.com/watch?v=C1m5hQDjk20)
+- 🎥 [They Made An IDE For React? (Codux)](https://www.youtube.com/watch?v=_599WJnZd4g)
+- 🧑‍🎓 [Build a Realtime Chat App with Remix and Supabase](https://egghead.io/courses/build-a-realtime-chat-app-with-remix-and-supabase-d36e2618): nouveau cours gratuit Egghead
+- 📦 [Tailwind Protocol template](https://twitter.com/adamwathan/status/1603433598660407296)
+- 📦 [@fastify/react beta](https://github.com/fastify/fastify-dx/releases/tag/react-v0.1.0)
+- 📦 [React-Hook-Form 7.41.0](https://twitter.com/HookForm/status/1603887632710176768)
+- 📦 [Astro 1.7](https://twitter.com/astrodotbuild/status/1603868604667158529)
+- 📦 [Redwood 3.7](https://github.com/redwoodjs/redwood/releases/tag/v3.7.0)
+- 📦 [React Spectrum + React Aria - December 2022 Releases](https://twitter.com/devongovett/status/1603864523488006144)
+- 🐦 ["Introducing hardware-accelerated animations in Framer Motion!"](https://twitter.com/mattgperry/status/1603010346763132933)
 
 <SubscribeFormEmbed />
 
@@ -65,7 +105,20 @@ Une fois le questionnaire complété, vous obtiendrez un accès gratuit à notre
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+[Pointer Events in React Native](https://reactnative.dev/blog/2022/12/13/pointer-events-in-react-native)
+
+- 📜 [No, React Native is not the future](https://blog.standardnotes.com/40921/no-react-native-is-not-the-future)
+- 📜 [Running your Maestro Flows on GitHub Actions](https://blog.mobile.dev/running-your-maestro-flows-on-github-actions-fe2e016b7338)
+- 📜 [Apple Considering Dropping Requirement for iPhone Web Browsers to Use WebKit](https://www.macrumors.com/2022/12/14/apple-considering-non-webkit-iphone-browsers/)
+- 📜 The Current State of Debugging on React Native: [Part One: Expo](https://www.g2i.co/blog/the-current-state-of-debugging-on-react-native-part-1) + [Part Two: Bare RN](https://www.g2i.co/blog/the-current-state-of-debugging-on-react-native-part-two-bare-rn)
+- 📦 [React-Native 0.71.0-RC.5](https://twitter.com/CipolleschiR/status/1604907381971976208): dernière release de 2022. Sortie officielle 0.71 début Janvier
+- 📦 [Expo-MDX](https://twitter.com/Baconbrix/status/1603053674548367360)
+- 📦 [React-Native-Fiesta](https://github.com/mateoguzmana/react-native-fiesta)
+- 🎨 [React-Native Skia - UI thread rendering demo](https://twitter.com/MateoGuzmanA/status/1604107348188057601)
+- 🐦 ["React-Native 0.70 has broken the 40% market share"️](https://twitter.com/Kelset/status/1604794763965669377)
+- 🐦 ["Did you know you can turn only some parts of the new architecture in React Native?"](https://twitter.com/Tr0zZe/status/1604854481979854848)
+- 🧵 ["What makes Ignite v8 ("Maverick") so cool"](https://twitter.com/jamonholmgren/status/1603201805336588288)
+- 📖 [Expo docs update](https://twitter.com/amanhimself/status/1603806595808653312)
 
 ---
 
@@ -81,22 +134,32 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 
 ## 🇫🇷 En français {#fr}
 
-Pas de contenu cette semaine 😅
+- 📜 [Organiser son projet JavaScript](https://grafikart.fr/tutoriels/organisation-projet-javascript-2098)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
-
-<Todo />
 
 ---
 
 ## 🔀 Autre {#other}
 
-<Todo />
+- [Interop 2022: end of year update](https://web.dev/interop-2022-wrapup/)
+- [StackOverflow Survey 2022 Results](https://survey.stackoverflow.co/2022/)
+- [TypeScript Articles by Matt Pocock](https://www.totaltypescript.com/articles)
+- [Announcing SvelteKit 1.0](https://svelte.dev/blog/announcing-sveltekit-1.0)
+- [Deno 1.29](https://twitter.com/deno_land/status/1603509812079181824)
+- [Vercel Edge Functions - Generally Available](https://vercel.com/blog/edge-functions-generally-available)
+- [Help choose the syntax for CSS Nesting](https://webkit.org/blog/13607/help-choose-from-options-for-css-nesting-syntax/)
+- [Why I'm Optimistic About JavaScript's Future](https://leerob.substack.com/p/why-im-optimistic-about-javascripts)
+- [Using inline JavaScript modules to prevent CSS blockage](https://calendar.perfplanet.com/2022/using-inline-javascript-modules-to-prevent-css-blockage/)
+- [Release Notes for Safari Technology Preview 160](https://webkit.org/blog/13639/release-notes-for-safari-technology-preview-160/)
+- [Chromium - Intent to Ship WebGPU](https://groups.google.com/a/chromium.org/g/blink-dev/c/VomzPhvJCxI/m/SUhU9Z0vAgAJ)
+- [Discussing tRPC & GraphQL with Theo Browne & Max Stoiber](https://www.youtube.com/watch?v=2-407yO8nEU)
+- [2022 a Golden Year as JavaScript Moves to the Edge](https://thenewstack.io/2022-a-golden-year-as-javascript-moves-to-the-edge/)
+- [Web Share API is a W3C Proposed Recommendation](https://www.w3.org/blog/news/archives/9773)
+- [ESLint 8.30](https://eslint.org/blog/2022/12/eslint-v8.30.0-released/)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
-
-[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/todo)
+[![alt](/emails/issues/129/meme.png)](https://twitter.com/ryanflorence/status/1603247783254798336)
