--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/129/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/129/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /129
-title: "React Hebdo #129: ..."
+title: "React Hebdo #129: useEffectEvent, Storybook, OpenNEXT, React Email, Remix, Next.js, Pointer-Events, Expo-MDX, Expo-Image, Svelte..."
 authors: [slorber]
 date: 12-31-2023
 image: /img/TWIR_POST.png
@@ -9,7 +9,13 @@ unlisted: true
 
 Salut à tous !
 
+Cette semaine est plutôt bien remplie pour une fin d'année 🤪 Je vous laisse découvrir tout ça.
+
 Mon [épisode pour le podcast React Round Up](https://topenddevs.com/podcasts/react-round-up/episodes/new-react-features-mdx-and-docusaurus-with-sebastien-lorber-rru-206) est en ligne. On y parle des dernières nouveautés React 18, de MDX ou encore Docusaurus.
+
+👋 C'est la dernière édition de l'année, la newsletter reviens le 10 janvier !
+
+🎄 Bonnes fêtes de fin d'année 🎅
 
 <!-- truncate -->
 
