--- a/website/newsletter/130/index.mdx
+++ b/website/newsletter/130/index.mdx
@@ -2,7 +2,7 @@
 slug: /130
 title: "This Week In React #130: ..."
 authors: [slorber]
-date: 03/01/2023
+date: 01-03-2023
 image: /img/TWIR_POST.png
 unlisted: true
 ---
