--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/130/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/130/index.mdx
@@ -7,9 +7,16 @@ image: /img/TWIR_POST.png
 unlisted: true
 ---
 
-Salut à tous !
+Salut à tous et bonne année 2023 🍾🥂🥳️
 
-<Todo />
+En cette période de fêtes, il y a tout de même eu pas mal d'activité avec une release Next.js et de supers articles React. Et l'écosystème React-Native a été particulièrement actif également, avec Tamagui, le support TypeScript et 2 articles Shopify.
+
+Vous êtes maintenant plus de **15000 abonnés** à me lire chaque semaine 😍
+
+Merci pour votre fidélité et votre contribution à la croissance de ce projet. Je ferai bientôt une rétrospective 2022 pour vous dévoiler. En attendant, vous trouverez beaucoup d'infos sur ma [page Indie Hackers](https://www.indiehackers.com/product/french-react-newsletter).
+
+La newsletter est revenue en avance: j'ai décalé ma semaine de ski, car il n'y a pas beaucoup de neige 😅
+Prochaine édition le 17 Janvier.
 
 <!-- truncate -->
 
