--- a/website/newsletter/130/index.mdx
+++ b/website/newsletter/130/index.mdx
@@ -65,7 +65,7 @@ A new minor version with a lot of improvements, including:
 ---
 
 - 📖 Beta docs: [useEffectEvent](https://beta.reactjs.org/learn/separating-events-from-effects#declaring-an-effect-event)
-- 📖 Redux docs: [Side Effects Approaches](https://twitter.com/acemarke/status/1607869290715222016)
+- 📖 Redux docs: [Side Effects Approaches](https://twitter.com/acemarke/status/1607869290715222016), thunks, sagas, observables, listeners, RTQ Query...
 - 📜 [React ref Callback Use–Cases](https://julesblom.com/writing/ref-callback-use-cases): complete article about callback refs which allow to trigger side effects related to DOM elements. Jules presents many use cases: portals, measuring a DOM element...
 - 📜 [The Ultimate Form Abstraction](https://www.brendonovich.dev/blog/the-ultimate-form-abstraction): explains how to use React-Hook-Form with a Zod resolver. Leverage the brand new Zod type-coercion feature for number inputs. Gradually build a great form abstraction with a good DX and typesafety.
 - 📜 [A React Developer’s First Take on Solid](https://jakelazaroff.com/words/a-react-developers-first-take-on-solid/): an interesting comparison between Solid and React, then SolidStart and Next.js/Remix. Jake also lists things he doesn't like in Solid.
